add favicon and description

--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Your local wholefoods store with a focus On ethical consumption offering healthy natural products & minimising waste. Address: Bosboom Toussaintstraat 45-H 1054 AN Amsterdam">
+    <meta name="author" content="Little Plant Pantry">
 
     <title>Little Plant Pantry - Your Local Wholefoods Store</title>
+    
+    <link rel="icon" 
+      type="image/png" 
+      href="img/favicon.png"/>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
