--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Your local wholefoods store with a focus On ethical consumption offering healthy natural products & minimising waste. Address: Bosboom Toussaintstraat 45-H 1054 AN Amsterdam">
+    <meta name="description" content="Little Plant Pantry - Bosboom Toussaintstraat 45-H 1054 AN Amsterdam - Your local wholefoods store with a focus On ethical consumption offering healthy natural products & minimising waste.">
     <meta name="author" content="Little Plant Pantry">
 
     <title>Little Plant Pantry - Your Local Wholefoods Store</title>
