add photo credit

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
   
   <footer>
     <container>
-      <p class="footer-copyright">© 2018 Little Plant Pantry. All Rights Reserved.</p>
+      <p class="footer-copyright">Background Photo by <a href="https://unsplash.com/@ellaolsson">Ella Olsson</a> on <a href="https://unsplash.com/photos/7EhPbdAQG-s">Unsplash</a>. © 2018 Little Plant Pantry. All Rights Reserved.</p>
     </container>
   </footer>
     
