--- a/index.html
+++ b/index.html
@@ -133,13 +133,14 @@
 
           <br/>
 
-          <p>Made from natural sources without any added artificial ingredients or GMOs;</p>
-          <p>Certified Organic when possible;*</p>
-          <p>Certified Fairtrade when possible;</p>
-          <p>Free from animal products or by-products;</p>
-          <p>Cruelty free and have never been tested on animals;</p>
-          <p>Made by Little Plant Pantry or for Little Plant Pantry by small batch artisan producers whenever possible;</p>
-          <p>Sustainably packaged, always free from plastic and compostable whenever possible.</p>
+          <p>Made from natural sources without any added artificial ingredients</p>
+	  <p>Sustainably sourced*</p>
+          <p>Certified Organic*</p>
+          <p>Fairtrade when possible</p>
+          <p>Free from animal products or by-products</p>
+          <p>Cruelty free and have never been tested on animals</p>
+          <p>Made by Little Plant Pantry or for Little Plant Pantry by small batch local artisan producers</p>
+          <p>Environmentally packaged, free from plastic and compostable whenever possible</p>
 
           <br/>
 
