--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           <br/>
 
           <p>Made from natural sources without any added artificial ingredients</p>
-	  <p>Sustainably sourced*</p>
+	  <p>Sustainably sourced</p>
           <p>Certified Organic*</p>
           <p>Fairtrade when possible</p>
           <p>Free from animal products or by-products</p>
