--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             </h2>
             <br/>
             <p class="text-primary mb-4">
-              Little Plant Pantry is a speciality food store offering a wide range of bulk wholefoods and 100% plant-based handcrafted foods and beverages, baked, pickled, fermented or prepared as meals for takeout. Whether you prefer to cook at home following a recipe or pick up ready-made food at the store, we want to make sure that your meal does not only enrich your body but also is good for the environment. With ethical consumerism at the forefront of our minds, we sell only the highest quality plant-based products without plastic packaging, giving priority to local suppliers who meet and share our core values.
+              Little Plant Pantry is a new plant-based zero-waste wholefoods store in Amsterdam opening in January 2019. As a speciality food store with a focus on ethical consumerism and sustainability, we only offer healthy natural products and try to minimize waste by completely avoiding plastic, selling in bulk and finding compostable alternatives to traditional packaging. Besides stocking all the essentials for a healthy plant-based diet and for living a healthy lifestyle, the store also provides the highest quality handcrafted foods and beverages, baked, pickled, fermented or prepared as meals for taking home, either made by us or selected by us from like minded local artisan producers who meet and share our core values. The range of products sold in the store includes everything from fresh fruit and vegetables, grains and nuts sold loose to beautiful handmade natural cosmetics. 
             </p>
           </div>
         </div>
