--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Little Plant Pantry - Bosboom Toussaintstraat 45-H 1054 AN Amsterdam - Your local wholefoods store with a focus On ethical consumption offering healthy natural products & minimising waste.">
     <meta name="author" content="Little Plant Pantry">
 
-    <title>Little Plant Pantry - Plant-Based Zero-Waste Wholefoods Store</title>
+    <title>Little Plant Pantry | Plant-Based Zero-Waste Wholefoods Store</title>
     
     <link rel="icon" 
       type="image/png" 
