more social media

--- a/index.html
+++ b/index.html
@@ -157,11 +157,15 @@
                   <p><a class="text-white-primary" href="mailto:info@littleplantpantry.com">info@littleplantpantry.com</a></p>
                   <p>
                     <a href="https://www.instagram.com/littleplantpantry/">
-                      <i class="fab fa-2x fa-facebook text-white-primary"></i>
+                      <i class="fab fa-2x fa-instagram text-white-primary"></i>
                     </a>
                     &nbsp;&nbsp;&nbsp;&nbsp;
                     <a href=" https://www.facebook.com/Little-Plant-Pantry-207334173524476/">
-                      <i class="fab fa-2x fa-instagram text-white-primary"></i>
+                      <i class="fab fa-2x fa-facebook text-white-primary"></i>
+                    </a>
+                    &nbsp;&nbsp;&nbsp;&nbsp;
+                    <a href="https://twitter.com/lilplantpantry">
+                      <i class="fab fa-2x fa-twitter text-white-primary"></i>
                     </a>
                   </p>
                 </div>
