add Google Site verification

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Little Plant Pantry - Bosboom Toussaintstraat 45-H 1054 AN Amsterdam - Your local wholefoods store with a focus On ethical consumption offering healthy natural products & minimising waste.">
     <meta name="author" content="Little Plant Pantry">
+    <meta name="google-site-verification" content="35ijPXEfYdVdJ-6nj1LpidEX2DYP6EAxGDc9R1Pz0yc" />
 
     <title>Little Plant Pantry | Plant-Based Zero-Waste Wholefoods Store</title>
     
