add OpenGraph meta tag for classic URL unfurl

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Little Plant Pantry - Bosboom Toussaintstraat 45-H 1054 AN Amsterdam - Your local wholefoods store with a focus On ethical consumption offering healthy natural products & minimising waste.">
     <meta name="author" content="Little Plant Pantry">
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.littleplantpantry.com" />
+    <meta property="og:title" content="Little Plant Pantry" />
+    <meta property="og:description" content="Little Plant Pantry - Bosboom Toussaintstraat 45-H 1054 AN Amsterdam - Your local wholefoods store with a focus On ethical consumption offering healthy natural products & minimising waste." />
+    <meta property="og:image" content="https://littleplantpantry.com/img/header.jpg">
     <meta name="google-site-verification" content="35ijPXEfYdVdJ-6nj1LpidEX2DYP6EAxGDc9R1Pz0yc" />
 
     <title>Little Plant Pantry | Plant-Based Zero-Waste Wholefoods Store</title>
@@ -25,7 +30,7 @@
     <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-	<link href="css/creative.min.css" rel="stylesheet">
+    <link href="css/creative.min.css" rel="stylesheet">
 
   </head>
 
