more work on meta tags for url unfurl

--- a/index.html
+++ b/index.html
@@ -3,23 +3,29 @@
 
   <head>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Little Plant Pantry - Bosboom Toussaintstraat 45-H 1054 AN Amsterdam - Your local wholefoods store with a focus On ethical consumption offering healthy natural products & minimising waste.">
-    <meta name="author" content="Little Plant Pantry">
-    <link rel="canonical" href="https://cognitiveclass.ai/courses/blockchain-course/">
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:description" content="Little Plant Pantry - Bosboom Toussaintstraat 45-H 1054 AN Amsterdam - Your local wholefoods store with a focus On ethical consumption offering healthy natural products & minimising waste.">
-    <meta name="twitter:title" content="Little Plant Pantry | Plant-Based Zero-Waste Wholefoods Store">
-    <meta name="twitter:image" content="https://www.littleplantpantry.com/img/header.jpg">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <title>Little Plant Pantry | Plant-Based Zero-Waste Wholefoods Store</title>
+    <meta name="description" content="Little Plant Pantry - Bosboom Toussaintstraat 45-H 1054 AN Amsterdam - Your local wholefoods store with a focus On ethical consumption offering healthy natural products & minimising waste." />
+    <meta name="author" content="Little Plant Pantry" />
+    <link rel="canonical" href="https://www.littleplantpantry.com" />
+
+    <!-- facebook open graph tags -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.littleplantpantry.com" />
     <meta property="og:title" content="Little Plant Pantry" />
     <meta property="og:description" content="Little Plant Pantry - Bosboom Toussaintstraat 45-H 1054 AN Amsterdam - Your local wholefoods store with a focus On ethical consumption offering healthy natural products & minimising waste." />
-    <meta property="og:image" content="https://www.littleplantpantry.com/img/header.jpg">
-    <meta name="google-site-verification" content="35ijPXEfYdVdJ-6nj1LpidEX2DYP6EAxGDc9R1Pz0yc" />
+    <meta property="og:image" content="https://www.littleplantpantry.com/img/header.jpg" />
 
-    <title>Little Plant Pantry | Plant-Based Zero-Waste Wholefoods Store</title>
+    <!-- twitter card tags additive with the og: tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:domain" value="littleplantpantry.com" />
+    <meta name="twitter:description" value="Little Plant Pantry - Bosboom Toussaintstraat 45-H 1054 AN Amsterdam - Your local wholefoods store with a focus On ethical consumption offering healthy natural products & minimising waste." />
+    <meta name="twitter:title" value="Little Plant Pantry | Plant-Based Zero-Waste Wholefoods Store" />
+    <meta name="twitter:image" value="https://www.littleplantpantry.com/img/header.jpg" />
+    <meta name="twitter:url" value="https://www.littleplantpantry.com" />
+
+    <meta name="google-site-verification" content="35ijPXEfYdVdJ-6nj1LpidEX2DYP6EAxGDc9R1Pz0yc" />
     
     <link rel="icon" 
       type="image/png" 
