--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="row">
           <div class="col-lg-10 mx-auto">
             <h1>
-              <strong class="text-uppercase">Opening in January 2019</strong>
+              <strong class="text-uppercase">Opening Soon</strong>
             </h1>
             <p id="header-address" class="text-primary">Bosboom Toussaintstraat 45-H<br/>1054 AN Amsterdam</p>
           </div>
@@ -184,7 +184,7 @@
             </div>
           </div>
         <div class="row">
-          <p class="footer-copyright">© 2018 Little Plant Pantry. All Rights Reserved.</p>
+          <p class="footer-copyright">© 2019 Little Plant Pantry. All Rights Reserved.</p>
         </div>
         </div>
       </div>
