--- a/index.html
+++ b/index.html
@@ -123,10 +123,25 @@
 	  
  <section class="bg-mint text-center">
       <div class="container">
-        <h2 class="mb-4 text-black">Currently Available Products Sold Loose:</h2>
+        <h2 class="mb-4 text-black">Currently Available Products Sold In Bulk</h2>
+	      
+	<div class="text-primary">
+          <h4 class="mb-4 text-black">Superfoods:</h4>
+		
+	<p> Organic Cacao Powder </p>
+	<p> Organic Coconut Sugar </p>
+	<p> Organic Inca Berries </p>
+	<p> Organic Spirulina Powder </p>
+	<p> Organic Chia Seeds </p>
+	<p> Organic Hulled Hemp Seeds </p>
+	<p> Organic Quinoa - White </p>
+	<p> Organic Quinoa - Tricolor </p>
+	<p> Organic Cocoa Nibs </p>
+
+          <br/>
         
         <div class="text-primary">
-          <h4 class="mb-4 text-black">Spices</h4>
+          <h4 class="mb-4 text-black">Spices:</h4>
 
           <br/>
 
@@ -148,7 +163,7 @@
 	<p> Smoked Paprika Powder </p>
 
           <br/>
-		
+	</div>	
         </div>
       </div>
     </section>
