--- a/index.html
+++ b/index.html
@@ -126,6 +126,21 @@
         <h2 class="mb-4 text-black">Currently Available Products Sold In Bulk</h2>
 	      
 	<div class="text-primary">
+          <h4 class="mb-4 text-black">Grains & Rice:</h4>
+		
+	<p> Organic Buckwheat (Peeled) </p>
+	<p> Organic Kasha </p>
+	<p> Organic Short Brown Rice </p>
+	<p> Organic Long Brown Rice </p>
+	<p> Organic Rice Arborio </p>
+	<p> Organic Rice White Jasmine </p>
+	<p> Organic Rice Basmati Brown </p>	
+	<p> Organic Rice Basmati White </p>
+	<p> Organic Rice White Short Grain </p>
+		
+	 <br/>
+	      
+	<div class="text-primary">
           <h4 class="mb-4 text-black">Superfoods:</h4>
 		
 	<p> Organic Cacao Powder </p>
@@ -163,6 +178,7 @@
 	<p> Smoked Paprika Powder </p>
 
           <br/>
+	</div>		
 	</div>	
         </div>
       </div>
