--- a/index.html
+++ b/index.html
@@ -139,7 +139,25 @@
 	<p> Organic Rice White Short Grain </p>
 		
 	 <br/>
-	      
+		
+	<div class="text-primary">
+          <h4 class="mb-4 text-black">Pulses & Lentils:</h4>	
+		
+	<p> Organic Lentils Beluga </p>
+	<p> Organic Lentils French Green Dupuy </p>
+	<p> Organic Lentils Red Split </p>
+	<p> Organic Football Lentils </p>
+	<p> Organic Lentils Yellow Split </p>
+	<p> Organic French Green Lentils </p>
+	<p> Organic Brown Lentils </p>
+	<p> Organic Red Kidney Beans </p>
+	<p> Organic Aduki Beans </p>
+	<p> Organic Black Beans </p>
+	<p> Organic Green Split Peas </p>
+	<p> Organic Yellow Split Peas </p>
+	     
+	<br/>
+		
 	<div class="text-primary">
           <h4 class="mb-4 text-black">Superfoods:</h4>
 		
@@ -177,7 +195,7 @@
 	<p> Cinnamon Sticks 8 cm </p>
 	<p> Smoked Paprika Powder </p>
 
-          <br/>
+	</div>
 	</div>		
 	</div>	
         </div>
