--- a/index.html
+++ b/index.html
@@ -155,7 +155,24 @@
 	<p> Organic Black Beans </p>
 	<p> Organic Green Split Peas </p>
 	<p> Organic Yellow Split Peas </p>
+	<p> Organic Chickpeas </p>
 	     
+	<br/>
+		
+	<div class="text-primary">
+          <h4 class="mb-4 text-black">Nuts & Seeds:</h4>	
+		
+	<p> Organic Almonds </p>
+	<p> Organic Cashews </p>
+	<p> Organic Hazelnuts </p>
+	<p> Organic Walnuts </p>
+	<p> Organic Peanuts </p>
+	<p> Organic Pistache </p>
+	<p> Organic Flax Seeds - Milled </p>
+	<p> Organic Pumpkin Seeds - GWS AA </p>
+	<p> Organic Sesame Seeds </p>
+	<p> Organic Sunflower Seeds </p>
+		
 	<br/>
 		
 	<div class="text-primary">
@@ -195,6 +212,7 @@
 	<p> Cinnamon Sticks 8 cm </p>
 	<p> Smoked Paprika Powder </p>
 
+	</div>
 	</div>
 	</div>		
 	</div>	
