--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 	<p> Organic Hazelnuts </p>
 	<p> Organic Walnuts </p>
 	<p> Organic Peanuts </p>
-	<p> Organic Pistache </p>
+	<p> Organic Pistachios </p>
 	<p> Organic Flax Seeds - Milled </p>
 	<p> Organic Pumpkin Seeds - GWS AA </p>
 	<p> Organic Sesame Seeds </p>
