--- a/index.html
+++ b/index.html
@@ -189,6 +189,20 @@
 	<p> Organic Cocoa Nibs </p>
 
           <br/>
+		
+	<div class="text-primary">
+          <h4 class="mb-4 text-black">Flour:</h4>
+		
+	<p> Organic Rye Flour Wholegrain </p>
+	<p> Organic Tapioca Starch </p>	
+	<p> Organic Wheat Flour Whole </p>
+	<p> Organic Wheat Flour (Pastry) </p>
+	<p> Organic Wheat Gluten </p>
+	<p> Organic Wheat Flour Bread </p>
+	<p> Organic Chickpea Flour </p>
+	<p> Organic Buckwheat Flour - Gluten Free </p>
+		
+	<br/>
         
         <div class="text-primary">
           <h4 class="mb-4 text-black">Spices:</h4>
@@ -212,6 +226,7 @@
 	<p> Cinnamon Sticks 8 cm </p>
 	<p> Smoked Paprika Powder </p>
 
+	</div>
 	</div>
 	</div>
 	</div>		
