--- a/index.html
+++ b/index.html
@@ -203,6 +203,18 @@
 	<p> Organic Buckwheat Flour - Gluten Free </p>
 		
 	<br/>
+		
+		<div class="text-primary">
+          <h4 class="mb-4 text-black">Liquids:</h4>
+		
+	<p> Organic Maple Syrup </p>
+	<p> Organic Rapeseed Oil </p>
+	<p> Organic Apple Cider Vinegar </p>
+	<p> Organic Strong Olive Oil (Greece) </p>
+	<p> Organic Mild Olive Oil (Greece) </p>
+	<p> Organic Olive Oil (Italy) </p>
+			
+	<br/>
         
         <div class="text-primary">
           <h4 class="mb-4 text-black">Spices:</h4>
@@ -226,6 +238,7 @@
 	<p> Cinnamon Sticks 8 cm </p>
 	<p> Smoked Paprika Powder </p>
 
+	</div>
 	</div>
 	</div>
 	</div>
