--- a/index.html
+++ b/index.html
@@ -215,6 +215,16 @@
 	<p> Organic Olive Oil (Italy) </p>
 			
 	<br/>
+			
+		<div class="text-primary">
+          <h4 class="mb-4 text-black">Teas & Coffee:</h4>
+			
+	<p> Organic Earl Grey Tea </p>
+	<p> Organic Jasmin Green Tea </p>
+	<p> Organic Rooibos Tea </p>
+	<p> Organic Friut Tea (Pomegranate & Mint) </p>
+	<p> Organic Lemon & Ginger Tea </p>
+	<p> Organic & Locally Roasted Colombian Coffee </p>
         
         <div class="text-primary">
           <h4 class="mb-4 text-black">Spices:</h4>
@@ -238,6 +248,7 @@
 	<p> Cinnamon Sticks 8 cm </p>
 	<p> Smoked Paprika Powder </p>
 
+	</div>
 	</div>
 	</div>
 	</div>
