--- a/index.html
+++ b/index.html
@@ -225,11 +225,11 @@
 	<p> Organic Friut Tea (Pomegranate & Mint) </p>
 	<p> Organic Lemon & Ginger Tea </p>
 	<p> Organic & Locally Roasted Colombian Coffee </p>
+			
+	<br/>
         
         <div class="text-primary">
           <h4 class="mb-4 text-black">Spices:</h4>
-
-          <br/>
 
         <p> Organic Ground White Pepper </p>
 	<p> Organic Black Pepper Whole </p>
@@ -247,7 +247,19 @@
 	<p> Organic Sea Salt Fine </p>
 	<p> Cinnamon Sticks 8 cm </p>
 	<p> Smoked Paprika Powder </p>
+		
+		<br/>
+		
+	<div class="text-primary">
+          <h4 class="mb-4 text-black">Various:</h4>
+		
+	<p> Organic Dessicated Coconut Medium </p>
+	<p> Organic Nutritional Yeast Flakes </p>
+	<p> Organic CousCous White </p>
+	<p> Organic Whole Pitted Dates </p>
+	<p> Organic Raisin Sultana </p>
 
+	</div>
 	</div>
 	</div>
 	</div>
