--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 	<p> Organic Nutritional Yeast Flakes </p>
 	<p> Organic CousCous White </p>
 	<p> Organic Whole Pitted Dates </p>
-	<p> Organic Raisin Sultana </p>
+	<p> Organic Raisins Sultana </p>
 
 	</div>
 	</div>
