--- a/index.html
+++ b/index.html
@@ -204,6 +204,16 @@
 		
 	<br/>
 		
+	<div class="text-primary">
+          <h4 class="mb-4 text-black">Flakes, Puffs & Cereals:</h4>
+		
+	<p> Organic Oat Flakes </p>
+	<p> Organic Millet Flakes </p>
+	<p> Organic Rice Puffs </p>
+	<p> Organic Crunchy Muesli </p>
+		
+	<br/>
+		
 		<div class="text-primary">
           <h4 class="mb-4 text-black">Liquids:</h4>
 		
@@ -217,7 +227,7 @@
 	<br/>
 			
 		<div class="text-primary">
-          <h4 class="mb-4 text-black">Teas & Coffee:</h4>
+          <h4 class="mb-4 text-black">Tea & Coffee:</h4>
 			
 	<p> Organic Earl Grey Tea </p>
 	<p> Organic Jasmin Green Tea </p>
@@ -259,6 +269,7 @@
 	<p> Organic Whole Pitted Dates </p>
 	<p> Organic Raisins Sultana </p>
 
+	</div>
 	</div>
 	</div>
 	</div>
