--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <div class="service-box mt-5 mx-auto">
               <h3 class="mb-3 text-black">Wholefoods Store</h3>
               <h5 class="text-primary">All the essentials for a healthy diet and lifestyle</h5>
-              <p class="text-muted mb-0 text-primary">In the store, products are mostly sold loose without packaging in bulk form, including oils, sweet syrups, spices and even cleaning detergents. You can buy as much or as little as you want. Pre-packed goods are in environmentally friendly packaging, including refrigerated ready-made meals for take home.</p>
+              <p class="text-muted mb-0 text-primary">In the store, products are mostly sold loose without packaging in bulk form, including oils, sweet syrups and spices. You can buy as much or as little as you want. Pre-packed goods are in environmentally friendly packaging, including refrigerated ready-made meals for take home.</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-12 text-center" id="service-2">
