--- a/index.html
+++ b/index.html
@@ -220,9 +220,9 @@
 	<p> Organic Maple Syrup </p>
 	<p> Organic Rapeseed Oil </p>
 	<p> Organic Apple Cider Vinegar </p>
-	<p> Organic Strong Olive Oil (Greece) </p>
-	<p> Organic Mild Olive Oil (Greece) </p>
-	<p> Organic Olive Oil (Italy) </p>
+	<p> Organic Extra Virgin Strong Olive Oil (Greece) </p>
+	<p> Organic Extra Virgin Mild Olive Oil (Greece) </p>
+	<p> Organic Extra Virgin Olive Oil (Italy) </p>
 			
 	<br/>
 			
