add opening hours to footer

--- a/products.html
+++ b/products.html
@@ -164,6 +164,7 @@
               </div>
               
               <div class="col-lg-6 mr-auto footer-contact">
+                <p>Opening Tue - Sat 10:00 - 19:00, Sun 12:00 - 18:00, closed on Mon</p>
                 <p><a href="https://goo.gl/maps/v2LfgXUzdnr">Bosboom Toussaintstraat 45-H 1054 AN Amsterdam</a></p>
                 <p><a href="mailto:info@littleplantpantry.com">info@littleplantpantry.com</a></p>
                 <p>
