fix footer link

--- a/products.html
+++ b/products.html
@@ -160,7 +160,7 @@
             <div class="row">
                 
               <div class="col-lg-6 ml-auto">
-                <a href="../index.html" alt="back to homepage"><img alt="Little Plant Pantry logo" src="img/logo-jar-text.png"/></a>
+                <a href="./index.html" alt="back to homepage"><img alt="Little Plant Pantry logo" src="img/logo-jar-text.png"/></a>
               </div>
               
               <div class="col-lg-6 mr-auto footer-contact">
